adding random num and zoom

--- a/social-media-post/ui.html
+++ b/social-media-post/ui.html
@@ -2083,10 +2083,10 @@
     <input
       class="input__field"
       type="text"
-      value="username"
+      value="@username"
       id="username"
-      onfocus="if (this.value === 'username') { this.value = ''; }"
-      onblur="if (this.value === '') { this.value = 'username'; }"
+      onfocus="if (this.value === '@username') { this.value = ''; }"
+      onblur="if (this.value === '') { this.value = '@username'; }"
     />
 
     <label for="name">Name</label>
